<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_replay_tool_ros2</name>
  <version>2.0.0</version>
  <description>GUI tool for replaying ROS2 bag files with topic selection and playback control</description>

  <maintainer email="amap@todo.todo">amap</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
